<resources>
    <string name="app_name">System Tweaker PRO</string>
    <string name="prefs_theme_key">theme</string>
    <string name="settingstile">Settings</string>
    <string name="root">ROOT WORKING!</string>
    <string name="initd">INIT.D WORKING!</string>
    <string name="busybox">BUSYBOX V1.27.2 \n(FROM THIS PROGRAM)!!</string>
    <string name="rootbad">NO ROOT</string>
    <string name="initdbad">NO INIT.D </string>
    <string name="busyboxbad">NO BUSYBOX</string>
    <string name="hello">Welcome to\nSystem Tweaker PRO!!!\n</string>
    <string name="before">Before using this programm:</string>
    <string name="cauton">Understand, that you solely responsible for any damage device!</string>
    <string name="speedy">This speeding up includes:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cal">CALIBRATE</string>
    <string name="calinfo">If button "CALIBRATE" not active, verify the implementation of both the calibration terms (100% battery level and connected power).\n\nCalibrate process includes deleting files from /data/system/:\n- batterystats.bin\n- batterystats-daily.xml\n- batterystats-checkin.bin</string>
    <string name="batterylevel">Battery Level</string>
    <string name="charger">Charger connected?</string>
    <string name="cautonbattery">ATTENTION! CALIBRATION MAY DAMAGE THE BATTERY OR THE DEVICE!  DO ONLY AT YOUR OWN RISK</string>
    <string name="calibrate">You can make battery calibration only if you have problems with low energy efficiency devices without objective reasons (e.g., battery swelling), incorrectly shows the battery level. Also you can make calibrate when you reinstalled ROM on your device. \nPlease do not make battery calibration just like that, because you can damage your device or battery\n\nBut if you do decide to do the calibration (of course, at your own risk), follow the instructions below:</string>
    <string name="calsucess">Calibration successful!</string>
    <string name="reboot">Reboot</string>
    <string name="rebootdialog">It is recommended to reboot now. \n\nDo you want to reboot your device? \n\n</string>
    <string name="errordev">ERROR! PLEASE CONNECT WITH DEVELOPER</string>
    <string name="erroroot">ERROR! YOU HAVENT ROOT!</string>
    <string name="speedsucc">Speed up successful!</string>
    <string name="backupsucc">Backup successfully created!</string>
    <string name="error">Error!</string>
    <string name="lastbackup">Last backup was created: </string>
    <string name="vosst">Successfully restored!</string>
    <string name="backupfuck">Backup not found :(</string>
    <string name="yasno">I understand</string>
    <string name="backup">Backup</string>
    <string name="buildpropbackup">build.prop backup</string>
    <string name="initdbackup">Init.d folder backup</string>
    <string name="restore">Restore</string>
    <string name="restorebuildprop">Restore build.prop</string>
    <string name="restoreinit.d">Restore init.d folder</string>
    <string name="foundbackup">You can found backup files in: /sdcard/SystemTweaker/backups</string>
    <string name="batterysection">This section contains tweaks that can help you increase the battery life of the device.\n</string>
    <string name="firstbatterytweak">GServices tweak\nFixes overuse battery of GServices</string>
    <string name="secondbatterytweak">Improve powersaving\nFixes VM overuse</string>
    <string name="thirdbatterytweak">Increase WiFi autoscan time\nThis tweak improves powersaving</string>
    <string name="fifthbatterytweak">Enable Power Collapse\nThis option allows system to go into a deep sleep when the screen is off</string>
    <string name="sixthbatterytweak">Enable Power Supply</string>
    <string name="sevenbatterytweak">Enable better management of sensors during deepsleep</string>
    <string name="eithtbatterytweak">Disable system logging\n</string>
    <string name="tweakenabled">Tweak Enabled!</string>
    <string name="tweakdisabled">Tweak Disabled</string>
    <string name="internettweakswelcome">This section contains tweaks that can help you increase the speed and stability of internet.\n</string>
    <string name="firstinternettweak">Internet Tweaks\nImproving WiFi/3G/2G/4G tweaks, increasing download speed, improving stability</string>
    <string name="secondinternettweak">Improving internet speed\nChanging the TCP  an other values for the better</string>
    <string name="thirdinternettweak">Google DNS\nChange DNS to Google (8.8.8.8, 8.8.4.4)</string>
    <string name="forthinternettweak">Fast Dormancy\nEnabling this feature can increase the speed of the internet, but also reduce powersaving</string>
    <string name="fifthinternettweaks">IPv6 support</string>
    <string name="sixinternettweaks">IPv4 support</string>
    <string name="glavnays">Home</string>
    <string name="soglasenie">Agreement</string>
    <string name="infoabout">Device Information</string>
    <string name="speedup">Speed up in one click</string>
    <string name="calbattery">Battery Calibration</string>
    <string name="backupandrestore">Backup and restore</string>
    <string name="batterytweaks">Battery Tweaks</string>
    <string name="internettweaks">Internet Tweaks</string>
    <string name="systemtweaks">System Tweaks</string>
    <string name="mediatweaks">Media Tweaks</string>
    <string name="varioustweaks">Other Tweaks</string>
    <string name="sovetspowersave">Tips for improving powersaving</string>
    <string name="sovetsperfomance">Tips for improving performance</string>
    <string name="connect">Report a bug</string>
    <string name="aboutapp">About program</string>
    <string name="exit">Exit</string>
    <string name="main">Main</string>
    <string name="tweaks">Tweaks and utilities</string>
    <string name="prochee">Other</string>
    <string name="yourdevice">• Your device: </string>
    <string name="model">• Model: </string>
    <string name="serial">• Serial number:</string>
    <string name="cod">• Device codename: </string>
    <string name="android">• Android version: </string>
    <string name="boot">• Bootloader: </string>
    <string name="radio">• Radio: </string>
    <string-array name="rom">
        <item>(not chosen)</item>
        <item>Stock</item>
        <item>Custom</item>
    </string-array>
    <string name="language">• Active language: </string>
    <string name="sdk">• SDK version:</string>
    <string name="processor">• Processor: </string>
    <string name="processortype">• Processor type: </string>
    <string name="batthealth">• Battery health:</string>
    <string name="chargerconn">• Charger Connected: </string>
    <string name="batterytype">• Battery type: </string>
    <string name="voltage">• Voltage: </string>
    <string name="batterytemp">• Battery temperature: </string>
    <string name="levelbatt">• Battery level: </string>
    <string name="resolution">• Screen resolution: </string>
    <string name="goodbatterystatus">good</string>
    <string name="problems">having issues</string>
    <string name="sovets">Sovets</string>
    <string name="processorwo">Processor</string>
    <string name="memory">Memory</string>
    <string name="batt">Battery</string>
    <string name="screen">Screen</string>
    <string name="variostweaks">This section includes the different other tweaks\n</string>
    <string name="disableboot">Disable bootanimation</string>
    <string name="adb">Remove adb debug icon from statusbar</string>
    <string name="sendletter">Send</string>
    <string name="thanks">\nThank you very much for purchasing the professional version of this program!\n</string>
    <string name="aboutappinfo">This program allows you to customize your device, will help to get the maximum performance and help to increase the battery life of your device\n</string>
    <string name="author">The author: Alexander Kirillov (NowenUI)\n</string>
    <string name="libraries">Used libraries:</string>
    <string name="site">Official Site: NowenUI.com</string>
    <string name="opensite">Click to open site</string>
    <string name="agreement">Before using the program, you should read agreement</string>
    <string name="systemteweaks">This section contains tweaks that can be used to increase the stability and speed of the system and customize it\n</string>
    <string name="systemthree">Render UI with GPU, improving smooth of scrolling\nEnabling this tweak may improve performance and smooth, but only if your GPU is powerful</string>
    <string name="systemfour">Improving smooth and speed of scrolling</string>
    <string name="systemfive">Auto-zipalign\nThis tweak improving speed and performance of your phone</string>
    <string name="systemsix">Auto optimize SQLite\nThis tweak improving speed and performance of your phone</string>
    <string name="fstrim">FSTRIM- special utility that accelerates the operation of the device by performing the TRIM operation on the memory device\n</string>
    <string name="beforestrim">Select the partition(s) and press &quot;FSTRIM&quot;\n\n</string>
    <string name="installfstrim">Install fstrim library\n</string>
    <string name="fstrimboot">Make auto-FSTRIM at boot</string>
    <string name="fstrimlibok">Required libraries are already installed. \nNo installation required, just use</string>
    <string name="fileinstall">Required files are installed!</string>
    <string name="ok">Applied!</string>
    <string name="delete">Disabled!</string>
    <string name="gpstitle">GPS tweaks</string>
    <string name="rebootmanager">Reboot manager</string>
    <string name="reboothello">On this page you can  shutdown or reboot your device in the selected by you mode\n</string>
    <string name="hotreboot">Hot reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="rebootrec">Reboot into recovery</string>
    <string name="rebootbottloader">Reboot into bootloader</string>
    <string name="kerneltweaks">Kernel Tuner</string>
    <string name="kerneltweakshello">On this page you can manage your kernel</string>
    <string name="kernel1">Enable battery saving on multicore devices\nUse only if your device has two or more processors!</string>
    <string name="kernel2">Interactive Governor tweak</string>
    <string name="kernel3">Optimize kernel sleeping mode</string>
    <string name="kernel5">Disable Normalize Sleeper</string>
    <string name="kernel6">Enable Kernel SamePage Merging (KSM).\nIt must be supported by the kernel</string>
    <string name="kernel7">Enable fastcharge \nIt must be supported by the kernel</string>
    <string name="kernel8">Disable ZRam and SWAP\nIt must be supported by the kernel</string>
    <string name="io3">Improve read/write speed of the sdcard</string>
    <string name="oh">Ondemand/Hotplug governors tweak\nThe use of optimal values in order to achieve a balanced performance and energy efficiency</string>
    <string name="soundimprover">Sound Improver</string>
    <string name="nowe">After applying tweaks to full working please reboot your device!</string>
    <string name="d2017">Dynamic Battery Saving (DynBS)\nIt will help reduce power consumption by reducing unnecessary high processor frequency when these do not need \ nFor tweak say thank igaryasha94</string>
    <string name="mnogozadachndestrics">Disable multitasking restrictions\nTweak increases system performance and battery saving</string>
    <string name="faq">FAQ (only russian lang.)</string>
    <string name="vk">Our VK group</string>
    <string name="twitter">Our twitter</string>
    <string name="settings">Settings</string>
    <string name="dozename">Improve DOZE mode\nAvaliable for Android 7.0></string>
    <string name="lcdname">LCD power reduce</string>
    <string name="bosstdisable">Disable Touch &amp; Input boost</string>
</resources>