<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_drawer_item1"
        android:icon="@drawable/home"
        android:title="@string/glavnays" />
    <item
        android:id="@+id/navigation_drawer_item10"
        android:icon="@drawable/warning"
        android:title="@string/soglasenie" />
    <item android:title="@string/main">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item2"
                android:icon="@drawable/phone"
                android:title="@string/infoabout" />
            <item
                android:id="@+id/navigation_drawer_item3"
                android:icon="@drawable/oneclick"
                android:title="@string/speedup" />

            <item
                android:id="@+id/navigation_drawer_item5"
                android:icon="@drawable/battery"
                android:title="@string/calbattery" />

            <item
                android:id="@+id/navigation_drawer_item32"
                android:icon="@drawable/headp"
                android:title="@string/soundimprover" />

            <item
                android:id="@+id/braviainstaller"
                android:icon="@drawable/bravia_logotip"
                android:title="Bravia Engine Installer" />

            <item
                android:id="@+id/navigation_drawer_item21"
                android:icon="@drawable/sd"
                android:title="SDCard R/W Fix" />

            <item
                android:id="@+id/navigation_drawer_item23"
                android:icon="@drawable/dpi"
                android:title="DPI Changer" />

            <item
                android:id="@+id/navigation_drawer_item26"
                android:icon="@drawable/kernel"
                android:title="@string/kerneltweaks" />

            <item
                android:id="@+id/navigation_drawer_item9"
                android:icon="@drawable/backup"
                android:title="@string/backupandrestore" />

            <item
                android:id="@+id/navigation_drawer_item22"
                android:icon="@drawable/reboot_command"
                android:title="@string/rebootmanager" />
        </menu>
    </item>

    <item android:title="@string/tweaks">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item4"
                android:icon="@drawable/tweak_battery"
                android:title="@string/batterytweaks" />
            <item
                android:id="@+id/navigation_drawer_item6"
                android:icon="@drawable/internet"
                android:title="@string/internettweaks" />

            <item
                android:id="@+id/wifipasswords"
                android:icon="@drawable/wifi"
                android:title="WIFI Passwords" />

            <item
                android:id="@+id/navigation_drawer_item7"
                android:icon="@drawable/android"
                android:title="@string/systemtweaks" />

            <item
                android:id="@+id/navigation_drawer_item13"
                android:icon="@drawable/fstrim"
                android:title="FSTRIM" />
            <item
                android:id="@+id/navigation_drawer_item14"
                android:icon="@drawable/entropy"
                android:title="Entropy Generator" />
            <item
                android:id="@+id/navigation_drawer_item20"
                android:icon="@drawable/mediascanner"
                android:title="MediaServer | MediaScanner" />
            <item
                android:id="@+id/navigation_drawer_item8"
                android:icon="@drawable/media_tweaks"
                android:title="@string/mediatweaks" />
            <item
                android:id="@+id/navigation_drawer_item17"
                android:icon="@drawable/gps"
                android:title="@string/gpstitle" />

            <item
                android:id="@+id/navigation_drawer_item15"
                android:icon="@drawable/varios"
                android:title="@string/varioustweaks" />
        </menu>
    </item>
    <item android:title="@string/sovets">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item16"
                android:icon="@drawable/powersave"
                android:title="@string/sovetspowersave" />

            <item
                android:id="@+id/navigation_drawer_item19"
                android:icon="@drawable/memory"
                android:title="@string/sovetsperfomance" />

            <item
                android:id="@+id/navigation_drawer_item30"
                android:icon="@drawable/faq"
                android:title="@string/faq" />
        </menu>
    </item>
    <item android:title="@string/prochee">
        <menu>
            <item
                android:id="@+id/navigation_drawer_item11"
                android:icon="@drawable/bug"
                android:title="@string/connect" />

            <item
                android:id="@+id/navigation_drawer_item24"
                android:icon="@drawable/vkcircle"
                android:title="@string/vk" />

            <item
                android:id="@+id/navigation_drawer_item25"
                android:icon="@drawable/twittercircle"
                android:title="@string/twitter" />

            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/navigation_drawer_item12"
                android:icon="@drawable/info"
                android:title="@string/aboutapp" />
            <item
                android:id="@+id/navigation_drawer_item18"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>