<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center|center_horizontal"
            android:text="@string/reboothello"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/reboot_1"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/reboot" />

        <Button
            android:id="@+id/reboot_hot"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/hotreboot" />

        <Button
            android:id="@+id/shutdown"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/shutdown" />

        <Button
            android:id="@+id/rebootrecovery"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/rebootrec" />

        <Button
            android:id="@+id/rebootbootloader"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/rebootbottloader" />
    </LinearLayout>
</ScrollView>